# langgraph-invoice-ai

./: LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.bat  streamlit_app.py
data/outputs/: Invoice_1_Baseline_result.json  Invoice_2_Scanned_result.json  Invoice_3_Different_Format_result.json  Invoice_4_Price_Trap_result.json  Invoice_5_Missing_PO_result.json
data/results/: 26b6d6c2_result.json  5fc3071c_result.json  a78ca760_result.json  c7aa0704_result.json
src/: __init__.py
src/agents/: __init__.py  discrepancy_detection_agent.py  document_intelligence_agent.py  matching_agent.py  resolution_recommendation_agent.py
src/config/: __init__.py  exception.py  logger.py
src/graph/: __init__.py  state.py  workflow.py
src/models/: __init__.py  output_schema.py
src/prompts/: __init__.py  document_intelligence_prompt.txt  resolution_recommendation_prompt.txt
src/tools/: __init__.py  fuzzy_matcher.py  pdf_extractor.py  po_database.py
src/utils/: __init__.py  prompt_loader.py
tests/: __init__.py  test_integration.py
